--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@drawable/bg2">
+
+<LinearLayout
+    android:orientation="vertical"
+    android:layout_height="wrap_content"
+    android:layout_width="wrap_content">
+
+
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="TheSheCode"
+        android:textColor="#E91E63"
+        tools:ignore="HardCodedText,RtlHardcoded"
+        android:textSize="50sp"
+        android:layout_marginTop="150dp"
+        android:layout_marginLeft="50dp"
+         />
 
-</android.support.constraint.ConstraintLayout>
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="50dp"
+        android:hint="E-mail"
+        tools:ignore="HardCodedText"
+        android:id="@+id/email_login"
+        android:inputType="textEmailAddress"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+         android:layout_marginLeft="50dp"
+        android:layout_marginTop="10dp"
+        android:hint="Password"
+        tools:ignore="HardCodedText"
+        android:id="@+id/password_login"
+        android:autofillHints="password"
+        android:inputType="textPassword"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:padding="10dp"
+        android:text="Sign in"
+        android:id="@+id/login"
+        android:textColor="#FF5252"
+        android:background="#1A237E"
+        android:layout_marginLeft="120dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:layout_marginLeft="78dp"
+        android:id="@+id/newUserTV"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:text="New User? Sign Up Here!"
+        tools:ignore="HardCodedText"
+        android:textColor="#1A237E"
+        />
+
+
+
+
+
+
+
+</LinearLayout>
+
+</ScrollView>
