--- a/app/src/main/res/layout/activity_register_by_text_v.xml
+++ b/app/src/main/res/layout/activity_register_by_text_v.xml
@@ -170,7 +170,7 @@
             android:layout_marginRight="10dp"
             android:layout_marginTop="20dp"
             android:hint="Address"
-            android:inputType="textPassword"
+            android:inputType="textCapWords"
             tools:ignore="HardCodedText"
             android:textColor="#1A237E"/>
 
