--- a/app/src/main/res/layout/fragment_inspireher.xml
+++ b/app/src/main/res/layout/fragment_inspireher.xml
@@ -41,6 +41,17 @@
         android:inputType="text"
         tools:ignore="HardCodedText" />
 
+    <EditText
+        android:id="@+id/emailET"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="10dp"
+        android:hint="e-mail"
+        android:inputType="textEmailAddress"
+        tools:ignore="HardCodedText" />
+
     <Button
         android:id="@+id/submit_ih"
         android:layout_width="wrap_content"
@@ -54,6 +65,16 @@
         android:textColor="#FF5252"
         android:textSize="12sp"
         tools:ignore="HardCodedText" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Click on any entry and contact the wonder woman to know about her experience, her process and method so that YOU CAN SHINE TOO. Keep Going and Learning."
+        tools:ignore="HardCodedText"
+        android:textColor="#AD1457"
+        android:layout_marginRight="8dp"
+        android:layout_marginLeft="8dp"
+        android:textStyle="bold"/>
 
     <ListView
         xmlns:android="http://schemas.android.com/apk/res/android"
