--- a/app/src/main/res/layout/fragment_meetups.xml
+++ b/app/src/main/res/layout/fragment_meetups.xml
@@ -9,67 +9,79 @@
 
 
         <EditText
-            android:id="@+id/name_study_ET"
+            android:id="@+id/name_meetup_ET"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="20dp"
-            android:hint="Name"
+            android:hint="Name/Organiser"
             android:textColor="#AD1457"
             android:inputType="textCapWords"
             tools:ignore="HardcodedText"
             />
 
         <EditText
-            android:id="@+id/location_study_ET"
+            android:id="@+id/date_meetup_ET"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
-            android:hint="Location"
+            android:hint="Date(DD-MM-YY)"
+            android:textColor="#AD1457"
+            android:inputType="textCapWords"
+            tools:ignore="HardCodedText" />
+
+    <EditText
+        android:id="@+id/time_meetup_ET"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:hint="Timings"
+        android:textColor="#AD1457"
+        android:inputType="text"
+        tools:ignore="HardCodedText" />
+
+        <EditText
+            android:id="@+id/address_meetup_ET"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:hint="Address"
             android:textColor="#AD1457"
             android:inputType="textCapWords"
             tools:ignore="HardCodedText" />
 
 
-
         <EditText
-            android:id="@+id/email_study_ET"
+            android:id="@+id/description_meetup_ET"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
-            android:hint="e-mail"
+            android:hint="Description/Agenda"
             android:textColor="#AD1457"
             android:inputType="textEmailAddress"
             tools:ignore="HardCodedText" />
 
-        <EditText
-            android:id="@+id/reason_study_ET"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
-            android:textColor="#AD1457"
-            android:textSize="14.5sp"
-            android:hint="You want a study partner for(A project,mock interview..)"
-            android:inputType="text"
-            tools:ignore="HardCodedText" />
+
 
         <Button
-            android:id="@+id/submit_studyP"
+            android:id="@+id/submit_meetup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
-            android:layout_marginLeft="105dp"
+            android:layout_marginLeft="150dp"
             android:background="#AD1457"
             android:padding="8dp"
-            android:text="Sign up to get a partner!"
+            android:text="Post"
             android:textColor="#FCE4EC"
             android:textSize="12sp"
             tools:ignore="HardCodedText" />
@@ -77,7 +89,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Current List of study partners.Scroll down, click on any and get started!"
+            android:text="Current List of Meetups."
             tools:ignore="HardCodedText"
             android:layout_marginLeft="13dp"
             android:textSize="15sp"
@@ -93,7 +105,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:drawSelectorOnTop="true"
-        android:id="@+id/listView_studyP"/>
+        android:id="@+id/listView_meetup"/>
 
 
 
