--- a/app/src/main/res/layout/fragment_opportunities.xml
+++ b/app/src/main/res/layout/fragment_opportunities.xml
@@ -9,26 +9,26 @@
 
 
         <EditText
-            android:id="@+id/name_study_ET"
+            android:id="@+id/form_opp_ET"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="20dp"
-            android:hint="Name"
+            android:hint="Form(job posting,scholarship etc)"
             android:textColor="#AD1457"
             android:inputType="textCapWords"
             tools:ignore="HardcodedText"
             />
 
         <EditText
-            android:id="@+id/location_study_ET"
+            android:id="@+id/deadline_opp_ET"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
-            android:hint="Location"
+            android:hint="Last Date to apply(DD-MM-YY)"
             android:textColor="#AD1457"
             android:inputType="textCapWords"
             tools:ignore="HardCodedText" />
@@ -36,40 +36,29 @@
 
 
         <EditText
-            android:id="@+id/email_study_ET"
+            android:id="@+id/description_opp_ET"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
-            android:hint="e-mail"
+            android:hint="Description"
             android:textColor="#AD1457"
             android:inputType="textEmailAddress"
             tools:ignore="HardCodedText" />
 
-        <EditText
-            android:id="@+id/reason_study_ET"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
-            android:textColor="#AD1457"
-            android:textSize="14.5sp"
-            android:hint="You want a study partner for(A project,mock interview..)"
-            android:inputType="text"
-            tools:ignore="HardCodedText" />
+
 
         <Button
-            android:id="@+id/submit_studyP"
+            android:id="@+id/submit_opp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
-            android:layout_marginLeft="105dp"
+            android:layout_marginLeft="150dp"
             android:background="#AD1457"
             android:padding="8dp"
-            android:text="Sign up to get a partner!"
+            android:text="Post"
             android:textColor="#FCE4EC"
             android:textSize="12sp"
             tools:ignore="HardCodedText" />
@@ -77,7 +66,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Current List of study partners.Scroll down, click on any and get started!"
+            android:text="Current List of available opportunities.Scroll down,click on any and get started!"
             tools:ignore="HardCodedText"
             android:layout_marginLeft="13dp"
             android:textSize="15sp"
@@ -93,7 +82,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:drawSelectorOnTop="true"
-        android:id="@+id/listView_studyP"/>
+        android:id="@+id/listView_opp"/>
 
 
 
