--- a/app/src/main/res/layout/list_view.xml
+++ b/app/src/main/res/layout/list_view.xml
@@ -1,16 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="wrap_content"
+    android:layout_width="wrap_content"
+    android:orientation="vertical"
+    >
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#E91E63"
+        android:text="Scroll down, click on any and get started. Happy Learning!"
+        android:padding="8dp"
+        android:textStyle="bold"
+        />
+
 
 
 
 <ListView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@drawable/res_bg"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:drawSelectorOnTop="true"
     android:id="@+id/list"/>
+
+</LinearLayout>
 
 
 
